src/main.css
/* ... */
.portfolio-item-7 {
  background-image: url("/img/works/1600x1200_w03.webp");
}

.portfolio-item-8 {
  background-image: url("/img/works/1600x1200_w04.webp");
}

.project-image-bg-1 {
  background-image: url("/img/works/work-single-1/1920x1280_w01.webp");
}

.project-image-bg-2 {
  background-image: url("/img/works/work-single-1/1920x1080_w01-01.webp");
}

.project-image-bg-3 {
  background-image: url("/img/works/work-single-1/1920x1080_w01-02.webp");
}

/* ------------------------------------------------*/
/* Template Backgrounds End */
/* ------------------------------------------------*/
/* ------------------------------------------------*/
/* Basic Styles Start */
/* ------------------------------------------------*/
*, *::before, *::after {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}

button:active, button:focus {
  outline: none !important;
}

button::-moz-focus-inner {
  border: 0 !important;
}

input::-moz-focus-inner {
  border: 0 !important;
}

a:focus,
button:focus,
input:focus,
textarea:focus {
  -webkit-tap-highlight-color: transparent;
}

input,
textarea,
button,
select,
a {
  -webkit-tap-highlight-color: transparent;
}

::-moz-selection {
  background-color: var(--base-tint);
  color: var(--t-medium);
  text-shadow: none;
}

::selection {
  background-color: var(--base-tint);
  color: var(--t-medium);
  text-shadow: none;
}

::-webkit-scrollbar {
  display: none;
  width: 6px;
  background: var(--base-shade);
}
@media only screen and (min-width: 768px) {
  ::-webkit-scrollbar {
    display: block;
  }
}

::-webkit-scrollbar-track {
  background-color: var(--base-shade);
}

::-webkit-scrollbar-thumb {
  background-color: var(--base-tint);
  border-radius: var(--_radius-s);
}

html {
  width: 100%;
  height: 100%;
  font-family: sans-serif;
  font-size: 62.5%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  position: relative;
  width: 100%;
  min-width: 360px;
  overflow-x: unset !important;
  font: normal 400 var(--_size)/1.4 var(--_font-default);
  text-rendering: optimizeLegibility;
  background-color: var(--base);
  color: var(--t-medium);
}

section {
  position: relative;
  min-width: 360px;
}

a {
  text-decoration: none;
  outline: 0;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-transition: all var(--_animspeed-medium) var(--_animbezier);
  -moz-transition: all var(--_animspeed-medium) var(--_animbezier);
  transition: all var(--_animspeed-medium) var(--_animbezier);
}

img {
  display: block;
  width: 100%;
  height: auto;
}

.overflow-hidden {
  overflow: hidden !important;
}

.components {
  position: relative;
}

.components__item {
  position: relative;
  padding: 8rem 10%;
  border-bottom: 1px solid var(--stroke-elements);
}

.components__caption {
  display: block;
  font: normal 400 1.3rem/1 var(--_font-default);
  color: var(--t-medium);
  text-transform: uppercase;
  letter-spacing: 0.1rem;
  margin-bottom: 2rem;
}

.spacer {
  height: 300px;
}

html.lenis, html.lenis body {
  height: auto;
}

.lenis.lenis-smooth {
  scroll-behavior: auto !important;
}

.lenis.lenis-smooth [data-lenis-prevent] {
  -ms-scroll-chaining: none;
      overscroll-behavior: contain;
}

.lenis.lenis-stopped {
  overflow: hidden;
}

.lenis.lenis-scrolling iframe {
  pointer-events: none;
}

/* ------------------------------------------------*/
/* Basic Styles End */
/* ------------------------------------------------*/
/* ------------------------------------------------*/
/* Animations - Transitions Start */
/* ------------------------------------------------*/
/* ------------------------------------------------*/
/* Animations - Transitions End */
/* ------------------------------------------------*/
/* ------------------------------------------------*/
/* Animations - Backgrounds Start */
/* ------------------------------------------------*/
.video-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

#video-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: transparent;
}

.video {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: transparent;
  background-position: center center;
  -moz-background-size: contain;
       background-size: contain;
  -o-object-fit: cover;
     object-fit: cover;
}

/* ------------------------------------------------*/
/* Animations - Backgrounds End */
/* ------------------------------------------------*/
/* ------------------------------------------------*/
/* Elements - Typography Start */
/* ------------------------------------------------*/
h1 {
  font: normal 300 5.6rem var(--_font-accent);
  color: var(--t-bright);
}
@media only screen and (min-width: 768px) {
  h1 {
    font-size: 9rem;
  }
}
@media only screen and (min-width: 1200px) {
  h1 {
    font-size: 11rem;
  }
}
@media only screen and (min-width: 1400px) {
  h1 {
    font-size: 12.6rem;
  }
}
@media only screen and (min-width: 1600px) {
  h1 {
    font-size: 16rem;
  }
}

@media only screen and (min-width: 992px) {
  .headline-80-desktop .headline__title {
    max-width: 67rem;
  }
}
@media only screen and (min-width: 1200px) {
  .headline-80-desktop .headline__title {
    max-width: none;
  }
}

.headline__subtitle.space-top {
  margin-top: 4.6rem;
}
.headline__subtitle.space-bottom {
  margin-bottom: 3.8rem;
}
@media only screen and (min-width: 768px) {
  .headline__subtitle.space-top {
    margin-top: 5.7rem;
  }
  .headline__subtitle.space-bottom {
    margin-bottom: 4.2rem;
  }
}
@media only screen and (min-width: 992px) {
  .headline__subtitle.space-top {
    margin-top: 6.4rem;
  }
  .headline__subtitle.space-bottom {
    margin-bottom: 4.9rem;
  }
}
/* ... */

